Github Link Added

--- a/Sudoku/SudokuMain.html
+++ b/Sudoku/SudokuMain.html
@@ -13,7 +13,7 @@
     <header>
         <span class="heading-1">Sudoku</span>
         <img src="Sudoku-Logo.png" class="logo">
-        <a href="#"><img src="Github-Logo.png" class="logo2"></a>
+        <a href="https://github.com/amanbedi1"><img src="Github-Logo.png" class="logo2"></a>
 
     </header>
 
